@@ -18,6 +18,8 @@
 //    Foundation, Inc., 59 Temple Place, Suite 330, 
 //    Boston, MA  02111-1307  USA
 //
+// EXEMPLAR_VERSION: 1.0.1
+//
 
 #include <stdlib.h>
 #include <stdio.h>
