@@ -6,3 +6,5 @@
 	* Added 'CmdSwitch' class in 'lib/cmdswitch.cpp' and 'lib/cmdswitch.h'.
 2024-10-21 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed extraneous 'Sy' prefix in 'src/lib/profile.h'.
+2024-10-21 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented package version to 1.0.1.
